Fix: TTF-481 - footer- vertical link spacing
https://digitaltools.phe.org.uk/browse/TTF-481

--- a/app/shared/components/Nav/_style.scss
+++ b/app/shared/components/Nav/_style.scss
@@ -37,6 +37,7 @@
       .navbar-nav {
         display: block;
         width: 100%;
+        margin-top: 2rem;
 
         .nav-item {
           display: block;
@@ -44,8 +45,8 @@
 
         .nav-link {
           width: auto;
-          margin-bottom: 1rem;
-          margin-top: 1rem;
+          margin-bottom: .2rem;
+          margin-top: .2rem;
           display: inline-block;
         }
       }
